parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SHOW

Grammar

Rule 0     S' -> expression
Rule 1     expression -> dml END
Rule 2     expression -> ddl END
Rule 3     dml -> select
Rule 4     dml -> update
Rule 5     dml -> insert
Rule 6     dml -> delete
Rule 7     ddl -> create
Rule 8     ddl -> alter
Rule 9     ddl -> drop
Rule 10    select -> SELECT columns FROM table join where group_by having order_by limit
Rule 11    select -> SELECT columns into table FROM table join where group_by having order_by limit
Rule 12    table -> table COMMA table
Rule 13    table -> STRING AS STRING
Rule 14    table -> STRING STRING
Rule 15    table -> STRING
Rule 16    table -> DATASOURCE
Rule 17    join -> INNER JOIN table on join
Rule 18    join -> LEFT JOIN table on join
Rule 19    join -> RIGHT JOIN table on join
Rule 20    join -> FULL JOIN table on join
Rule 21    join -> JOIN table on join
Rule 22    join -> empty
Rule 23    on -> ON item COMPARISON item
Rule 24    where -> WHERE conditions
Rule 25    where -> empty
Rule 26    group_by -> GROUP BY strings
Rule 27    group_by -> empty
Rule 28    having -> HAVING conditions
Rule 29    having -> empty
Rule 30    order_by -> ORDER BY order
Rule 31    order_by -> empty
Rule 32    limit -> LIMIT numbers
Rule 33    limit -> empty
Rule 34    order -> order COMMA order
Rule 35    order -> string order_type
Rule 36    order_type -> ASC
Rule 37    order_type -> DESC
Rule 38    order_type -> empty
Rule 39    update -> UPDATE table SET set where
Rule 40    set -> set COMMA set
Rule 41    set -> item COMPARISON item
Rule 42    insert -> INSERT into table insert_columns VALUES values
Rule 43    insert -> INSERT into table insert_columns select
Rule 44    into -> INTO
Rule 45    into -> empty
Rule 46    insert_columns -> ( columns )
Rule 47    insert_columns -> empty
Rule 48    value -> value COMMA value
Rule 49    value -> string
Rule 50    value -> NUMBER
Rule 51    values -> values COMMA values
Rule 52    values -> ( value )
Rule 53    delete -> DELETE FROM table where
Rule 54    create -> CREATE TABLE string ( create_columns )
Rule 55    create_columns -> create_columns COMMA create_columns
Rule 56    create_columns -> string datatype
Rule 57    datatype -> INT
Rule 58    datatype -> INTEGER
Rule 59    datatype -> TINYINT
Rule 60    datatype -> SMALLINT
Rule 61    datatype -> MEDIUMINT
Rule 62    datatype -> BIGINT
Rule 63    datatype -> FLOAT
Rule 64    datatype -> DOUBLE
Rule 65    datatype -> DECIMAL
Rule 66    datatype -> CHAR ( NUMBER )
Rule 67    datatype -> VARCHAR ( NUMBER )
Rule 68    alter -> ALTER TABLE string change_column
Rule 69    change_column -> ADD string datatype
Rule 70    change_column -> DROP COLUMN string
Rule 71    change_column -> ALTER COLUMN string datatype
Rule 72    drop -> DROP TABLE string
Rule 73    columns -> columns COMMA columns
Rule 74    columns -> column_as
Rule 75    columns -> column
Rule 76    column_as -> column AS item
Rule 77    column_as -> column item
Rule 78    column -> function ( distinct_item )
Rule 79    column -> function ( item )
Rule 80    column -> distinct_item
Rule 81    column -> item
Rule 82    distinct_item -> DISTINCT item
Rule 83    distinct_item -> DISTINCT ( item )
Rule 84    function -> COUNT
Rule 85    function -> SUM
Rule 86    function -> AVG
Rule 87    function -> MIN
Rule 88    function -> MAX
Rule 89    item -> string
Rule 90    item -> NUMBER
Rule 91    item -> *
Rule 92    item -> string . item
Rule 93    numbers -> numbers COMMA numbers
Rule 94    numbers -> NUMBER
Rule 95    strings -> strings COMMA strings
Rule 96    strings -> string
Rule 97    items -> strings
Rule 98    items -> numbers
Rule 99    string -> STRING
Rule 100   string -> QSTRING
Rule 101   conditions -> conditions AND conditions
Rule 102   conditions -> conditions OR conditions
Rule 103   conditions -> ( conditions )
Rule 104   conditions -> compare
Rule 105   compare -> column COMPARISON item
Rule 106   compare -> column like QSTRING
Rule 107   compare -> column BETWEEN item AND item
Rule 108   compare -> column IS null
Rule 109   compare -> column in lritems
Rule 110   lritems -> ( items )
Rule 111   like -> LIKE
Rule 112   like -> NOT LIKE
Rule 113   in -> IN
Rule 114   in -> NOT IN
Rule 115   null -> NULL
Rule 116   null -> NOT NULL
Rule 117   empty -> <empty>

Terminals, with rules where they appear

(                    : 46 52 54 66 67 78 79 83 103 110
)                    : 46 52 54 66 67 78 79 83 103 110
*                    : 91
.                    : 92
ADD                  : 69
ALTER                : 68 71
AND                  : 101 107
AS                   : 13 76
ASC                  : 36
AVG                  : 86
BETWEEN              : 107
BIGINT               : 62
BY                   : 26 30
CHAR                 : 66
COLUMN               : 70 71
COMMA                : 12 34 40 48 51 55 73 93 95
COMPARISON           : 23 41 105
COUNT                : 84
CREATE               : 54
DATASOURCE           : 16
DECIMAL              : 65
DELETE               : 53
DESC                 : 37
DISTINCT             : 82 83
DOUBLE               : 64
DROP                 : 70 72
END                  : 1 2
FLOAT                : 63
FROM                 : 10 11 53
FULL                 : 20
GROUP                : 26
HAVING               : 28
IN                   : 113 114
INNER                : 17
INSERT               : 42 43
INT                  : 57
INTEGER              : 58
INTO                 : 44
IS                   : 108
JOIN                 : 17 18 19 20 21
LEFT                 : 18
LIKE                 : 111 112
LIMIT                : 32
MAX                  : 88
MEDIUMINT            : 61
MIN                  : 87
NOT                  : 112 114 116
NULL                 : 115 116
NUMBER               : 50 66 67 90 94
ON                   : 23
OR                   : 102
ORDER                : 30
QSTRING              : 100 106
RIGHT                : 19
SELECT               : 10 11
SET                  : 39
SHOW                 : 
SMALLINT             : 60
STRING               : 13 13 14 14 15 99
SUM                  : 85
TABLE                : 54 68 72
TINYINT              : 59
UPDATE               : 39
VALUES               : 42
VARCHAR              : 67
WHERE                : 24
error                : 

Nonterminals, with rules where they appear

alter                : 8
change_column        : 68
column               : 75 76 77 105 106 107 108 109
column_as            : 74
columns              : 10 11 46 73 73
compare              : 104
conditions           : 24 28 101 101 102 102 103
create               : 7
create_columns       : 54 55 55
datatype             : 56 69 71
ddl                  : 2
delete               : 6
distinct_item        : 78 80
dml                  : 1
drop                 : 9
empty                : 22 25 27 29 31 33 38 45 47
expression           : 0
function             : 78 79
group_by             : 10 11
having               : 10 11
in                   : 109
insert               : 5
insert_columns       : 42 43
into                 : 11 42 43
item                 : 23 23 41 41 76 77 79 81 82 83 92 105 107 107
items                : 110
join                 : 10 11 17 18 19 20 21
like                 : 106
limit                : 10 11
lritems              : 109
null                 : 108
numbers              : 32 93 93 98
on                   : 17 18 19 20 21
order                : 30 34 34
order_by             : 10 11
order_type           : 35
select               : 3 43
set                  : 39 40 40
string               : 35 49 54 56 68 69 70 71 72 89 92 96
strings              : 26 95 95 97
table                : 10 11 11 12 12 17 18 19 20 21 39 42 43 53
update               : 4
value                : 48 48 52
values               : 42 51 51
where                : 10 11 39 53

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . dml END
    (2) expression -> . ddl END
    (3) dml -> . select
    (4) dml -> . update
    (5) dml -> . insert
    (6) dml -> . delete
    (7) ddl -> . create
    (8) ddl -> . alter
    (9) ddl -> . drop
    (10) select -> . SELECT columns FROM table join where group_by having order_by limit
    (11) select -> . SELECT columns into table FROM table join where group_by having order_by limit
    (39) update -> . UPDATE table SET set where
    (42) insert -> . INSERT into table insert_columns VALUES values
    (43) insert -> . INSERT into table insert_columns select
    (53) delete -> . DELETE FROM table where
    (54) create -> . CREATE TABLE string ( create_columns )
    (68) alter -> . ALTER TABLE string change_column
    (72) drop -> . DROP TABLE string

    SELECT          shift and go to state 11
    UPDATE          shift and go to state 12
    INSERT          shift and go to state 13
    DELETE          shift and go to state 14
    CREATE          shift and go to state 15
    ALTER           shift and go to state 16
    DROP            shift and go to state 17

    expression                     shift and go to state 1
    dml                            shift and go to state 2
    ddl                            shift and go to state 3
    select                         shift and go to state 4
    update                         shift and go to state 5
    insert                         shift and go to state 6
    delete                         shift and go to state 7
    create                         shift and go to state 8
    alter                          shift and go to state 9
    drop                           shift and go to state 10

state 1

    (0) S' -> expression .



state 2

    (1) expression -> dml . END

    END             shift and go to state 18


state 3

    (2) expression -> ddl . END

    END             shift and go to state 19


state 4

    (3) dml -> select .

    END             reduce using rule 3 (dml -> select .)


state 5

    (4) dml -> update .

    END             reduce using rule 4 (dml -> update .)


state 6

    (5) dml -> insert .

    END             reduce using rule 5 (dml -> insert .)


state 7

    (6) dml -> delete .

    END             reduce using rule 6 (dml -> delete .)


state 8

    (7) ddl -> create .

    END             reduce using rule 7 (ddl -> create .)


state 9

    (8) ddl -> alter .

    END             reduce using rule 8 (ddl -> alter .)


state 10

    (9) ddl -> drop .

    END             reduce using rule 9 (ddl -> drop .)


state 11

    (10) select -> SELECT . columns FROM table join where group_by having order_by limit
    (11) select -> SELECT . columns into table FROM table join where group_by having order_by limit
    (73) columns -> . columns COMMA columns
    (74) columns -> . column_as
    (75) columns -> . column
    (76) column_as -> . column AS item
    (77) column_as -> . column item
    (78) column -> . function ( distinct_item )
    (79) column -> . function ( item )
    (80) column -> . distinct_item
    (81) column -> . item
    (84) function -> . COUNT
    (85) function -> . SUM
    (86) function -> . AVG
    (87) function -> . MIN
    (88) function -> . MAX
    (82) distinct_item -> . DISTINCT item
    (83) distinct_item -> . DISTINCT ( item )
    (89) item -> . string
    (90) item -> . NUMBER
    (91) item -> . *
    (92) item -> . string . item
    (99) string -> . STRING
    (100) string -> . QSTRING

    COUNT           shift and go to state 26
    SUM             shift and go to state 27
    AVG             shift and go to state 28
    MIN             shift and go to state 29
    MAX             shift and go to state 30
    DISTINCT        shift and go to state 31
    NUMBER          shift and go to state 33
    *               shift and go to state 34
    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

    columns                        shift and go to state 20
    column_as                      shift and go to state 21
    column                         shift and go to state 22
    item                           shift and go to state 23
    function                       shift and go to state 24
    distinct_item                  shift and go to state 25
    string                         shift and go to state 32

state 12

    (39) update -> UPDATE . table SET set where
    (12) table -> . table COMMA table
    (13) table -> . STRING AS STRING
    (14) table -> . STRING STRING
    (15) table -> . STRING
    (16) table -> . DATASOURCE

    STRING          shift and go to state 38
    DATASOURCE      shift and go to state 39

    table                          shift and go to state 37

state 13

    (42) insert -> INSERT . into table insert_columns VALUES values
    (43) insert -> INSERT . into table insert_columns select
    (44) into -> . INTO
    (45) into -> . empty
    (117) empty -> .

    INTO            shift and go to state 41
    STRING          reduce using rule 117 (empty -> .)
    DATASOURCE      reduce using rule 117 (empty -> .)

    into                           shift and go to state 40
    empty                          shift and go to state 42

state 14

    (53) delete -> DELETE . FROM table where

    FROM            shift and go to state 43


state 15

    (54) create -> CREATE . TABLE string ( create_columns )

    TABLE           shift and go to state 44


state 16

    (68) alter -> ALTER . TABLE string change_column

    TABLE           shift and go to state 45


state 17

    (72) drop -> DROP . TABLE string

    TABLE           shift and go to state 46


state 18

    (1) expression -> dml END .

    $end            reduce using rule 1 (expression -> dml END .)


state 19

    (2) expression -> ddl END .

    $end            reduce using rule 2 (expression -> ddl END .)


state 20

    (10) select -> SELECT columns . FROM table join where group_by having order_by limit
    (11) select -> SELECT columns . into table FROM table join where group_by having order_by limit
    (73) columns -> columns . COMMA columns
    (44) into -> . INTO
    (45) into -> . empty
    (117) empty -> .

    FROM            shift and go to state 47
    COMMA           shift and go to state 49
    INTO            shift and go to state 41
    STRING          reduce using rule 117 (empty -> .)
    DATASOURCE      reduce using rule 117 (empty -> .)

    into                           shift and go to state 48
    empty                          shift and go to state 42

state 21

    (74) columns -> column_as .

    FROM            reduce using rule 74 (columns -> column_as .)
    COMMA           reduce using rule 74 (columns -> column_as .)
    INTO            reduce using rule 74 (columns -> column_as .)
    STRING          reduce using rule 74 (columns -> column_as .)
    DATASOURCE      reduce using rule 74 (columns -> column_as .)
    )               reduce using rule 74 (columns -> column_as .)


state 22

    (75) columns -> column .
    (76) column_as -> column . AS item
    (77) column_as -> column . item
    (89) item -> . string
    (90) item -> . NUMBER
    (91) item -> . *
    (92) item -> . string . item
    (99) string -> . STRING
    (100) string -> . QSTRING

  ! shift/reduce conflict for STRING resolved as shift
    FROM            reduce using rule 75 (columns -> column .)
    COMMA           reduce using rule 75 (columns -> column .)
    INTO            reduce using rule 75 (columns -> column .)
    DATASOURCE      reduce using rule 75 (columns -> column .)
    )               reduce using rule 75 (columns -> column .)
    AS              shift and go to state 50
    NUMBER          shift and go to state 33
    *               shift and go to state 34
    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

  ! STRING          [ reduce using rule 75 (columns -> column .) ]

    item                           shift and go to state 51
    string                         shift and go to state 32

state 23

    (81) column -> item .

    AS              reduce using rule 81 (column -> item .)
    NUMBER          reduce using rule 81 (column -> item .)
    *               reduce using rule 81 (column -> item .)
    STRING          reduce using rule 81 (column -> item .)
    QSTRING         reduce using rule 81 (column -> item .)
    FROM            reduce using rule 81 (column -> item .)
    COMMA           reduce using rule 81 (column -> item .)
    INTO            reduce using rule 81 (column -> item .)
    DATASOURCE      reduce using rule 81 (column -> item .)
    )               reduce using rule 81 (column -> item .)
    COMPARISON      reduce using rule 81 (column -> item .)
    BETWEEN         reduce using rule 81 (column -> item .)
    IS              reduce using rule 81 (column -> item .)
    LIKE            reduce using rule 81 (column -> item .)
    NOT             reduce using rule 81 (column -> item .)
    IN              reduce using rule 81 (column -> item .)


state 24

    (78) column -> function . ( distinct_item )
    (79) column -> function . ( item )

    (               shift and go to state 52


state 25

    (80) column -> distinct_item .

    AS              reduce using rule 80 (column -> distinct_item .)
    NUMBER          reduce using rule 80 (column -> distinct_item .)
    *               reduce using rule 80 (column -> distinct_item .)
    STRING          reduce using rule 80 (column -> distinct_item .)
    QSTRING         reduce using rule 80 (column -> distinct_item .)
    FROM            reduce using rule 80 (column -> distinct_item .)
    COMMA           reduce using rule 80 (column -> distinct_item .)
    INTO            reduce using rule 80 (column -> distinct_item .)
    DATASOURCE      reduce using rule 80 (column -> distinct_item .)
    )               reduce using rule 80 (column -> distinct_item .)
    COMPARISON      reduce using rule 80 (column -> distinct_item .)
    BETWEEN         reduce using rule 80 (column -> distinct_item .)
    IS              reduce using rule 80 (column -> distinct_item .)
    LIKE            reduce using rule 80 (column -> distinct_item .)
    NOT             reduce using rule 80 (column -> distinct_item .)
    IN              reduce using rule 80 (column -> distinct_item .)


state 26

    (84) function -> COUNT .

    (               reduce using rule 84 (function -> COUNT .)


state 27

    (85) function -> SUM .

    (               reduce using rule 85 (function -> SUM .)


state 28

    (86) function -> AVG .

    (               reduce using rule 86 (function -> AVG .)


state 29

    (87) function -> MIN .

    (               reduce using rule 87 (function -> MIN .)


state 30

    (88) function -> MAX .

    (               reduce using rule 88 (function -> MAX .)


state 31

    (82) distinct_item -> DISTINCT . item
    (83) distinct_item -> DISTINCT . ( item )
    (89) item -> . string
    (90) item -> . NUMBER
    (91) item -> . *
    (92) item -> . string . item
    (99) string -> . STRING
    (100) string -> . QSTRING

    (               shift and go to state 54
    NUMBER          shift and go to state 33
    *               shift and go to state 34
    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

    item                           shift and go to state 53
    string                         shift and go to state 32

state 32

    (89) item -> string .
    (92) item -> string . . item

    AS              reduce using rule 89 (item -> string .)
    NUMBER          reduce using rule 89 (item -> string .)
    *               reduce using rule 89 (item -> string .)
    STRING          reduce using rule 89 (item -> string .)
    QSTRING         reduce using rule 89 (item -> string .)
    FROM            reduce using rule 89 (item -> string .)
    COMMA           reduce using rule 89 (item -> string .)
    INTO            reduce using rule 89 (item -> string .)
    DATASOURCE      reduce using rule 89 (item -> string .)
    )               reduce using rule 89 (item -> string .)
    COMPARISON      reduce using rule 89 (item -> string .)
    BETWEEN         reduce using rule 89 (item -> string .)
    IS              reduce using rule 89 (item -> string .)
    LIKE            reduce using rule 89 (item -> string .)
    NOT             reduce using rule 89 (item -> string .)
    IN              reduce using rule 89 (item -> string .)
    WHERE           reduce using rule 89 (item -> string .)
    END             reduce using rule 89 (item -> string .)
    AND             reduce using rule 89 (item -> string .)
    OR              reduce using rule 89 (item -> string .)
    GROUP           reduce using rule 89 (item -> string .)
    HAVING          reduce using rule 89 (item -> string .)
    ORDER           reduce using rule 89 (item -> string .)
    LIMIT           reduce using rule 89 (item -> string .)
    INNER           reduce using rule 89 (item -> string .)
    LEFT            reduce using rule 89 (item -> string .)
    RIGHT           reduce using rule 89 (item -> string .)
    FULL            reduce using rule 89 (item -> string .)
    JOIN            reduce using rule 89 (item -> string .)
    .               shift and go to state 55


state 33

    (90) item -> NUMBER .

    AS              reduce using rule 90 (item -> NUMBER .)
    NUMBER          reduce using rule 90 (item -> NUMBER .)
    *               reduce using rule 90 (item -> NUMBER .)
    STRING          reduce using rule 90 (item -> NUMBER .)
    QSTRING         reduce using rule 90 (item -> NUMBER .)
    FROM            reduce using rule 90 (item -> NUMBER .)
    COMMA           reduce using rule 90 (item -> NUMBER .)
    INTO            reduce using rule 90 (item -> NUMBER .)
    DATASOURCE      reduce using rule 90 (item -> NUMBER .)
    )               reduce using rule 90 (item -> NUMBER .)
    COMPARISON      reduce using rule 90 (item -> NUMBER .)
    BETWEEN         reduce using rule 90 (item -> NUMBER .)
    IS              reduce using rule 90 (item -> NUMBER .)
    LIKE            reduce using rule 90 (item -> NUMBER .)
    NOT             reduce using rule 90 (item -> NUMBER .)
    IN              reduce using rule 90 (item -> NUMBER .)
    WHERE           reduce using rule 90 (item -> NUMBER .)
    END             reduce using rule 90 (item -> NUMBER .)
    AND             reduce using rule 90 (item -> NUMBER .)
    OR              reduce using rule 90 (item -> NUMBER .)
    GROUP           reduce using rule 90 (item -> NUMBER .)
    HAVING          reduce using rule 90 (item -> NUMBER .)
    ORDER           reduce using rule 90 (item -> NUMBER .)
    LIMIT           reduce using rule 90 (item -> NUMBER .)
    INNER           reduce using rule 90 (item -> NUMBER .)
    LEFT            reduce using rule 90 (item -> NUMBER .)
    RIGHT           reduce using rule 90 (item -> NUMBER .)
    FULL            reduce using rule 90 (item -> NUMBER .)
    JOIN            reduce using rule 90 (item -> NUMBER .)


state 34

    (91) item -> * .

    AS              reduce using rule 91 (item -> * .)
    NUMBER          reduce using rule 91 (item -> * .)
    *               reduce using rule 91 (item -> * .)
    STRING          reduce using rule 91 (item -> * .)
    QSTRING         reduce using rule 91 (item -> * .)
    FROM            reduce using rule 91 (item -> * .)
    COMMA           reduce using rule 91 (item -> * .)
    INTO            reduce using rule 91 (item -> * .)
    DATASOURCE      reduce using rule 91 (item -> * .)
    )               reduce using rule 91 (item -> * .)
    COMPARISON      reduce using rule 91 (item -> * .)
    BETWEEN         reduce using rule 91 (item -> * .)
    IS              reduce using rule 91 (item -> * .)
    LIKE            reduce using rule 91 (item -> * .)
    NOT             reduce using rule 91 (item -> * .)
    IN              reduce using rule 91 (item -> * .)
    WHERE           reduce using rule 91 (item -> * .)
    END             reduce using rule 91 (item -> * .)
    AND             reduce using rule 91 (item -> * .)
    OR              reduce using rule 91 (item -> * .)
    GROUP           reduce using rule 91 (item -> * .)
    HAVING          reduce using rule 91 (item -> * .)
    ORDER           reduce using rule 91 (item -> * .)
    LIMIT           reduce using rule 91 (item -> * .)
    INNER           reduce using rule 91 (item -> * .)
    LEFT            reduce using rule 91 (item -> * .)
    RIGHT           reduce using rule 91 (item -> * .)
    FULL            reduce using rule 91 (item -> * .)
    JOIN            reduce using rule 91 (item -> * .)


state 35

    (99) string -> STRING .

    .               reduce using rule 99 (string -> STRING .)
    AS              reduce using rule 99 (string -> STRING .)
    NUMBER          reduce using rule 99 (string -> STRING .)
    *               reduce using rule 99 (string -> STRING .)
    STRING          reduce using rule 99 (string -> STRING .)
    QSTRING         reduce using rule 99 (string -> STRING .)
    FROM            reduce using rule 99 (string -> STRING .)
    COMMA           reduce using rule 99 (string -> STRING .)
    INTO            reduce using rule 99 (string -> STRING .)
    DATASOURCE      reduce using rule 99 (string -> STRING .)
    )               reduce using rule 99 (string -> STRING .)
    COMPARISON      reduce using rule 99 (string -> STRING .)
    BETWEEN         reduce using rule 99 (string -> STRING .)
    IS              reduce using rule 99 (string -> STRING .)
    LIKE            reduce using rule 99 (string -> STRING .)
    NOT             reduce using rule 99 (string -> STRING .)
    IN              reduce using rule 99 (string -> STRING .)
    (               reduce using rule 99 (string -> STRING .)
    ADD             reduce using rule 99 (string -> STRING .)
    DROP            reduce using rule 99 (string -> STRING .)
    ALTER           reduce using rule 99 (string -> STRING .)
    END             reduce using rule 99 (string -> STRING .)
    WHERE           reduce using rule 99 (string -> STRING .)
    AND             reduce using rule 99 (string -> STRING .)
    OR              reduce using rule 99 (string -> STRING .)
    GROUP           reduce using rule 99 (string -> STRING .)
    HAVING          reduce using rule 99 (string -> STRING .)
    ORDER           reduce using rule 99 (string -> STRING .)
    LIMIT           reduce using rule 99 (string -> STRING .)
    INNER           reduce using rule 99 (string -> STRING .)
    LEFT            reduce using rule 99 (string -> STRING .)
    RIGHT           reduce using rule 99 (string -> STRING .)
    FULL            reduce using rule 99 (string -> STRING .)
    JOIN            reduce using rule 99 (string -> STRING .)
    INT             reduce using rule 99 (string -> STRING .)
    INTEGER         reduce using rule 99 (string -> STRING .)
    TINYINT         reduce using rule 99 (string -> STRING .)
    SMALLINT        reduce using rule 99 (string -> STRING .)
    MEDIUMINT       reduce using rule 99 (string -> STRING .)
    BIGINT          reduce using rule 99 (string -> STRING .)
    FLOAT           reduce using rule 99 (string -> STRING .)
    DOUBLE          reduce using rule 99 (string -> STRING .)
    DECIMAL         reduce using rule 99 (string -> STRING .)
    CHAR            reduce using rule 99 (string -> STRING .)
    VARCHAR         reduce using rule 99 (string -> STRING .)
    ASC             reduce using rule 99 (string -> STRING .)
    DESC            reduce using rule 99 (string -> STRING .)


state 36

    (100) string -> QSTRING .

    .               reduce using rule 100 (string -> QSTRING .)
    AS              reduce using rule 100 (string -> QSTRING .)
    NUMBER          reduce using rule 100 (string -> QSTRING .)
    *               reduce using rule 100 (string -> QSTRING .)
    STRING          reduce using rule 100 (string -> QSTRING .)
    QSTRING         reduce using rule 100 (string -> QSTRING .)
    FROM            reduce using rule 100 (string -> QSTRING .)
    COMMA           reduce using rule 100 (string -> QSTRING .)
    INTO            reduce using rule 100 (string -> QSTRING .)
    DATASOURCE      reduce using rule 100 (string -> QSTRING .)
    )               reduce using rule 100 (string -> QSTRING .)
    COMPARISON      reduce using rule 100 (string -> QSTRING .)
    BETWEEN         reduce using rule 100 (string -> QSTRING .)
    IS              reduce using rule 100 (string -> QSTRING .)
    LIKE            reduce using rule 100 (string -> QSTRING .)
    NOT             reduce using rule 100 (string -> QSTRING .)
    IN              reduce using rule 100 (string -> QSTRING .)
    (               reduce using rule 100 (string -> QSTRING .)
    ADD             reduce using rule 100 (string -> QSTRING .)
    DROP            reduce using rule 100 (string -> QSTRING .)
    ALTER           reduce using rule 100 (string -> QSTRING .)
    END             reduce using rule 100 (string -> QSTRING .)
    WHERE           reduce using rule 100 (string -> QSTRING .)
    AND             reduce using rule 100 (string -> QSTRING .)
    OR              reduce using rule 100 (string -> QSTRING .)
    GROUP           reduce using rule 100 (string -> QSTRING .)
    HAVING          reduce using rule 100 (string -> QSTRING .)
    ORDER           reduce using rule 100 (string -> QSTRING .)
    LIMIT           reduce using rule 100 (string -> QSTRING .)
    INNER           reduce using rule 100 (string -> QSTRING .)
    LEFT            reduce using rule 100 (string -> QSTRING .)
    RIGHT           reduce using rule 100 (string -> QSTRING .)
    FULL            reduce using rule 100 (string -> QSTRING .)
    JOIN            reduce using rule 100 (string -> QSTRING .)
    INT             reduce using rule 100 (string -> QSTRING .)
    INTEGER         reduce using rule 100 (string -> QSTRING .)
    TINYINT         reduce using rule 100 (string -> QSTRING .)
    SMALLINT        reduce using rule 100 (string -> QSTRING .)
    MEDIUMINT       reduce using rule 100 (string -> QSTRING .)
    BIGINT          reduce using rule 100 (string -> QSTRING .)
    FLOAT           reduce using rule 100 (string -> QSTRING .)
    DOUBLE          reduce using rule 100 (string -> QSTRING .)
    DECIMAL         reduce using rule 100 (string -> QSTRING .)
    CHAR            reduce using rule 100 (string -> QSTRING .)
    VARCHAR         reduce using rule 100 (string -> QSTRING .)
    ASC             reduce using rule 100 (string -> QSTRING .)
    DESC            reduce using rule 100 (string -> QSTRING .)


state 37

    (39) update -> UPDATE table . SET set where
    (12) table -> table . COMMA table

    SET             shift and go to state 56
    COMMA           shift and go to state 57


state 38

    (13) table -> STRING . AS STRING
    (14) table -> STRING . STRING
    (15) table -> STRING .

    AS              shift and go to state 59
    STRING          shift and go to state 58
    SET             reduce using rule 15 (table -> STRING .)
    COMMA           reduce using rule 15 (table -> STRING .)
    (               reduce using rule 15 (table -> STRING .)
    VALUES          reduce using rule 15 (table -> STRING .)
    SELECT          reduce using rule 15 (table -> STRING .)
    WHERE           reduce using rule 15 (table -> STRING .)
    END             reduce using rule 15 (table -> STRING .)
    INNER           reduce using rule 15 (table -> STRING .)
    LEFT            reduce using rule 15 (table -> STRING .)
    RIGHT           reduce using rule 15 (table -> STRING .)
    FULL            reduce using rule 15 (table -> STRING .)
    JOIN            reduce using rule 15 (table -> STRING .)
    GROUP           reduce using rule 15 (table -> STRING .)
    HAVING          reduce using rule 15 (table -> STRING .)
    ORDER           reduce using rule 15 (table -> STRING .)
    LIMIT           reduce using rule 15 (table -> STRING .)
    FROM            reduce using rule 15 (table -> STRING .)
    ON              reduce using rule 15 (table -> STRING .)


state 39

    (16) table -> DATASOURCE .

    SET             reduce using rule 16 (table -> DATASOURCE .)
    COMMA           reduce using rule 16 (table -> DATASOURCE .)
    (               reduce using rule 16 (table -> DATASOURCE .)
    VALUES          reduce using rule 16 (table -> DATASOURCE .)
    SELECT          reduce using rule 16 (table -> DATASOURCE .)
    WHERE           reduce using rule 16 (table -> DATASOURCE .)
    END             reduce using rule 16 (table -> DATASOURCE .)
    INNER           reduce using rule 16 (table -> DATASOURCE .)
    LEFT            reduce using rule 16 (table -> DATASOURCE .)
    RIGHT           reduce using rule 16 (table -> DATASOURCE .)
    FULL            reduce using rule 16 (table -> DATASOURCE .)
    JOIN            reduce using rule 16 (table -> DATASOURCE .)
    GROUP           reduce using rule 16 (table -> DATASOURCE .)
    HAVING          reduce using rule 16 (table -> DATASOURCE .)
    ORDER           reduce using rule 16 (table -> DATASOURCE .)
    LIMIT           reduce using rule 16 (table -> DATASOURCE .)
    FROM            reduce using rule 16 (table -> DATASOURCE .)
    ON              reduce using rule 16 (table -> DATASOURCE .)


state 40

    (42) insert -> INSERT into . table insert_columns VALUES values
    (43) insert -> INSERT into . table insert_columns select
    (12) table -> . table COMMA table
    (13) table -> . STRING AS STRING
    (14) table -> . STRING STRING
    (15) table -> . STRING
    (16) table -> . DATASOURCE

    STRING          shift and go to state 38
    DATASOURCE      shift and go to state 39

    table                          shift and go to state 60

state 41

    (44) into -> INTO .

    STRING          reduce using rule 44 (into -> INTO .)
    DATASOURCE      reduce using rule 44 (into -> INTO .)


state 42

    (45) into -> empty .

    STRING          reduce using rule 45 (into -> empty .)
    DATASOURCE      reduce using rule 45 (into -> empty .)


state 43

    (53) delete -> DELETE FROM . table where
    (12) table -> . table COMMA table
    (13) table -> . STRING AS STRING
    (14) table -> . STRING STRING
    (15) table -> . STRING
    (16) table -> . DATASOURCE

    STRING          shift and go to state 38
    DATASOURCE      shift and go to state 39

    table                          shift and go to state 61

state 44

    (54) create -> CREATE TABLE . string ( create_columns )
    (99) string -> . STRING
    (100) string -> . QSTRING

    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

    string                         shift and go to state 62

state 45

    (68) alter -> ALTER TABLE . string change_column
    (99) string -> . STRING
    (100) string -> . QSTRING

    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

    string                         shift and go to state 63

state 46

    (72) drop -> DROP TABLE . string
    (99) string -> . STRING
    (100) string -> . QSTRING

    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

    string                         shift and go to state 64

state 47

    (10) select -> SELECT columns FROM . table join where group_by having order_by limit
    (12) table -> . table COMMA table
    (13) table -> . STRING AS STRING
    (14) table -> . STRING STRING
    (15) table -> . STRING
    (16) table -> . DATASOURCE

    STRING          shift and go to state 38
    DATASOURCE      shift and go to state 39

    table                          shift and go to state 65

state 48

    (11) select -> SELECT columns into . table FROM table join where group_by having order_by limit
    (12) table -> . table COMMA table
    (13) table -> . STRING AS STRING
    (14) table -> . STRING STRING
    (15) table -> . STRING
    (16) table -> . DATASOURCE

    STRING          shift and go to state 38
    DATASOURCE      shift and go to state 39

    table                          shift and go to state 66

state 49

    (73) columns -> columns COMMA . columns
    (73) columns -> . columns COMMA columns
    (74) columns -> . column_as
    (75) columns -> . column
    (76) column_as -> . column AS item
    (77) column_as -> . column item
    (78) column -> . function ( distinct_item )
    (79) column -> . function ( item )
    (80) column -> . distinct_item
    (81) column -> . item
    (84) function -> . COUNT
    (85) function -> . SUM
    (86) function -> . AVG
    (87) function -> . MIN
    (88) function -> . MAX
    (82) distinct_item -> . DISTINCT item
    (83) distinct_item -> . DISTINCT ( item )
    (89) item -> . string
    (90) item -> . NUMBER
    (91) item -> . *
    (92) item -> . string . item
    (99) string -> . STRING
    (100) string -> . QSTRING

    COUNT           shift and go to state 26
    SUM             shift and go to state 27
    AVG             shift and go to state 28
    MIN             shift and go to state 29
    MAX             shift and go to state 30
    DISTINCT        shift and go to state 31
    NUMBER          shift and go to state 33
    *               shift and go to state 34
    STRING          shift and go to state 35
    QSTRING         shift and go to state 36

    columns                        shift and go to state 67
    column_as                      shift and go to state 21
    column                         shift and go to state 22
    item                           shift and go to state 23
    function                       shift and go to state 24
    distinct_item                  shift and go to state 25
    string                         shift and go to state 32

state 50

    (76) column_as -> column AS . item
